# update_tables

./: example.xml  main.py  newTable.xml  pyproject.toml  rearranger.py  tableIndex.xml  table_index_parent_children.xml  table_schema_parent_children.xsd  tiffprinter.py  xml_parser.py
